# my-openenv

./: Dockerfile  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
core/: graders.py  model.py  openenv.yaml
envs/: data_cleaner.py  email_triage.py  scheduler.py
server/: app.py
